--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Edbasti.GitHub.io</h1>
-            <h2>My Projects</h2>
+            <h2>These Are My Projects</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
